# nemar-citations

./: .gitignore  .secrets.example  JSON_CITATION_FORMAT.md  LOCAL_EXECUTION.md  README.md  __init__.py  citation_summary.py  citation_utils.py  directories_list.txt  directories_list_july.txt  directories_list_june.txt  directories_list_oct24.txt  discover_datasets.py  discovered_datasets.txt  extract_dataset_ids.py  getCitations.py  get_citations.ipynb  lookup_trend.ipynb  migrate_pickle_to_json.py  plot_summary.py  pyproject.toml  regenerate_csv_from_json.py  requirements.txt  run_local_workflow.sh  sample_script.ipynb  search_for_datasets.sh  search_for_datashet.sh  test_package_structure.py  test_temporal_basic.py  update_citations.py
.github/: pull_request_template.md
.github/workflows/: update_citations.yml
citations/: citations_011023.csv  citations_02012025.csv  citations_08032025.csv  citations_21062024.csv  citations_25062025.csv  citations_25102024.csv  citations_26072025.csv  citations_28032024.csv  citations_29022024.csv  citations_31072024.csv  dataset_citations_analysis.csv  dataset_modalities_lookup.csv  directories_list_feb.txt  directories_list_jan25.txt  directories_list_mar25.txt  directories_list_march.txt  ds000117.pkl  ds000117.xlsx  ds000246.pkl  ds000247.pkl  ds000248.pkl  ds001784.pkl  ds001785.pkl  ds001787.pkl  ds001810.pkl  ds001849.pkl  ds001971.pkl  ds002001.pkl  ds002034.pkl  ds002094.pkl  ds002158.pkl  ds002181.pkl  ds002218.pkl  ds002336.pkl  ds002338.pkl  ds002680.pkl  ds002691.pkl  ds002712.pkl  ds002718.pkl  ds002720.pkl  (+228 more)
citations/json/: ds000117_citations.json  ds000246_citations.json  ds000247_citations.json  ds000248_citations.json  ds001784_citations.json  ds001785_citations.json  ds001787_citations.json  ds001810_citations.json  ds001849_citations.json  ds001971_citations.json  ds002001_citations.json  ds002034_citations.json  ds002094_citations.json  ds002158_citations.json  ds002181_citations.json  ds002218_citations.json  ds002336_citations.json  ds002338_citations.json  ds002550_citations.json  ds002578_citations.json  ds002680_citations.json  ds002691_citations.json  ds002712_citations.json  ds002718_citations.json  ds002720_citations.json  ds002721_citations.json  ds002722_citations.json  ds002723_citations.json  ds002724_citations.json  ds002725_citations.json  ds002761_citations.json  ds002778_citations.json  ds002799_citations.json  ds002814_citations.json  ds002885_citations.json  ds002893_citations.json  ds002908_citations.json  ds003004_citations.json  ds003029_citations.json  ds003039_citations.json  (+263 more)
citations/pickle/: ds000117.pkl  ds000246.pkl  ds000247.pkl  ds001849.pkl  ds002034.pkl  ds002218.pkl  ds002338.pkl  ds002578.pkl  ds002712.pkl  ds002718.pkl  ds002721.pkl  ds002722.pkl  ds002723.pkl  ds002761.pkl  ds002814.pkl  ds002908.pkl  ds003082.pkl  ds003343.pkl  ds003352.pkl  ds003380.pkl  ds003421.pkl  ds003478.pkl  ds003483.pkl  ds003498.pkl  ds003516.pkl  ds003517.pkl  ds003519.pkl  ds003523.pkl  ds003570.pkl  ds003620.pkl  ds003626.pkl  ds003633.pkl  ds003645.pkl  ds003655.pkl  ds003708.pkl  ds003710.pkl  ds003739.pkl  ds003775.pkl  ds003805.pkl  ds003846.pkl  (+80 more)
citations_output/: citations_21052025.csv  ds002550.pkl  ds002680.pkl  ds002725.pkl  ds002799.pkl  ds003029.pkl  ds003420.pkl  ds003474.pkl  ds003490.pkl  ds003505.pkl  ds003555.pkl  ds003568.pkl  ds003626.pkl  ds003682.pkl  ds003688.pkl  ds003690.pkl  ds003768.pkl  ds004000.pkl  ds004022.pkl  ds004078.pkl  ds004306.pkl  ds004584.pkl  ds004598.pkl  ds004625.pkl  ds004809.pkl  ds004883.pkl  ds004902.pkl  ds005106.pkl  ds005169.pkl  ds005261.pkl  ds005273.pkl  ds005383.pkl  ds005516.pkl  ds005545.pkl  ds005815.pkl  ds005866.pkl  ds005873.pkl  ds005931.pkl  ds006018.pkl  ds006036.pkl  (+3 more)
datasets/: ds000117_datasets.json  ds000246_datasets.json  ds000247_datasets.json  ds000248_datasets.json  ds001784_datasets.json  ds001785_datasets.json  ds001787_datasets.json  ds001810_datasets.json  ds001849_datasets.json  ds001971_datasets.json  ds002034_datasets.json  ds002094_datasets.json  ds002158_datasets.json  ds002181_datasets.json  ds002218_datasets.json  ds002336_datasets.json  ds002338_datasets.json  ds002550_datasets.json  ds002578_datasets.json  ds002680_datasets.json  ds002691_datasets.json  ds002712_datasets.json  ds002718_datasets.json  ds002720_datasets.json  ds002721_datasets.json  ds002722_datasets.json  ds002723_datasets.json  ds002724_datasets.json  ds002725_datasets.json  ds002761_datasets.json  ds002778_datasets.json  ds002799_datasets.json  ds002814_datasets.json  ds002885_datasets.json  ds002893_datasets.json  ds002908_datasets.json  ds003004_datasets.json  ds003029_datasets.json  ds003039_datasets.json  ds003061_datasets.json  (+260 more)
docs/: EMBEDDING_STORAGE_DESIGN.md  README.md  migration-plan.md
docs/cli/: README.md
docs/visualization/: interactive-dashboards.md
embeddings/analysis/: comprehensive_theme_analysis.json
embeddings/citation_embeddings/: citation_001df182_v1_20250731.pkl  citation_0043845f_v1_20250731.pkl  citation_00651337_v1_20250731.pkl  citation_006d6b88_v1_20250731.pkl  citation_00a76d15_v1_20250731.pkl  (+858 more)
interactive_reports/: README.md  author_influence.csv  bridge_papers.csv  citation_impact_rankings.csv  comprehensive_theme_analysis_analysis.csv  dataset_citations_network.cx  dataset_citations_network.gexf  dataset_citations_network.graphml  dataset_co_citations.csv  dataset_popularity.csv  multi_dataset_citations.csv  research_bridge_analysis_20250731_161858_analysis.csv  research_bridge_analysis_20250731_211956_analysis.csv  research_bridge_analysis_20250731_212106_analysis.csv  temporal_network_evolution.csv
neo4j_network_analysis_output/: author_influence.csv  citation_impact_rankings.csv  dataset_popularity.csv  neo4j_network_analysis_summary.json  temporal_network_evolution.csv
notebooks/: emg_citations.tsv  search_term.ipynb
results/: README.md  temporal_analysis.json
scripts/: generate_pr_content.py
tests/: README_TESTING.md  test_citation_utils.py  test_discover_datasets.py  test_getCitations.py
(+360 files in other folders)
